feat(*): refactor code